--- a/OptionalChaining/index.html
+++ b/OptionalChaining/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Прототипы и наследование</title>
+    <title>Optional Chaining</title>
   </head>
   <body>
     <div class="wrapper">
-      <h2>Прототипы и наследование</h2>
+      <h2>Оператор Опциональной Цепочки (Optional Chaining)</h2>
     </div>
 
     <script src="script.js"></script>
